--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ html {
 }
 
 .banner h2 {
-  font-family: 'Noto Sans Japanese';
+  font-family: 'Noto Sans JP';
   padding: .55rem 0;
   border-top: 4px solid #ffb78c;
   border-bottom: 4px solid #ffb78c;
