--- a/style.css
+++ b/style.css
@@ -1,23 +1,10 @@
 html {
-  font-size: 18px;
-}
-
-
-/* Header */
-
-.header {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 4.44rem;
-  padding: 0 12%;
-  background-color: white;
-  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.05);
-  font-family: Verdana, sans-serif;
-  font-size: .77rem;
-  font-weight: bold;
-}
-
-section{
-color: red;
+    font-size: 18px;
+  }
+.container{
+    border: 10px;
+    color: red;
+  }
+.color-container{
+background-color: bisque;
 }
