--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html {
     font-size: 18px;
   }
 .container {
-  border: 2px solid #a2a2a6;
+  border: 2px solid blue;
   padding: 10px;
   margin: 10px auto;
 }
