--- a/style.css
+++ b/style.css
@@ -7,5 +7,12 @@ html {
   margin: 10px auto;
 }
 .color-container{
-background-color: bisque;
+  width: 100%;
+}
+.color-block{
+    display: inline-block;
+    width: 33%;
+    text-align: center;
+    margin: 20px auto;
+    min-height: 100px;
 }
